diskann-quantization/tests/compile-fail/error/inline_error_align.stderr
error[E0080]: evaluation panicked: error type has alignment stricter than 8
 --> src/error.rs
  |
  | /             assert!(
  | |                 std::mem::align_of::<T>() <= std::mem::align_of::<&'static ErrorVTable>(),
  | |                 "error type has alignment stricter than 8"
  | |             )
  | |_____________^ evaluation of `diskann_quantization::error::InlineError::new::<Error>::{constant#1}` failed here

note: erroneous constant encountered
   --> src/error.rs
    |
    | /         const {
    | |             assert!(
    | |                 std::mem::align_of::<T>() <= std::mem::align_of::<&'static ErrorVTable>(),
    | |                 "error type has alignment stricter than 8"
    | |             )
    | |         };
    | |_________^

note: the above error was encountered while instantiating `fn InlineError::new::<Error>`
  --> tests/compile-fail/error/inline_error_align.rs:24:13
   |
24 |     let _ = InlineError::<16>::new(Error(10));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
